# sqlite-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/sqlite_mcp/: main.py  server.py
