[project]
name = "sqlite-mcp"
version = "0.1.0"
description = "Universal SQLite DB MCP Server"
readme = "README.md"
authors = [
    { name = "Gemini CLI" }
]
keywords = ["mcp", "sqlite", "database", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Database",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.27.0",
]

[project.scripts]
sqlite-mcp = "sqlite_mcp.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
