[project]
name = "sqlite-mcp-server"
version = "0.1.4"
description = "Universal SQLite DB MCP Server"
readme = "README.md"
authors = [
    { name = "stevefordev" }
]
keywords = ["mcp", "sqlite", "database", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Database",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.27.0",
]

[project.urls]
Homepage = "https://github.com/stevefordev/sqlite-mcp"
Repository = "https://github.com/stevefordev/sqlite-mcp"
Issues = "https://github.com/stevefordev/sqlite-mcp/issues"

[project.scripts]
sqlite-mcp-server = "sqlite_mcp.main:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/sqlite_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
